ngrok done well !!!!

--- a/game/ToDo/Todo
+++ b/game/ToDo/Todo
@@ -1,4 +1,1 @@
-Creer le Host du serveur. Si se connecte en prems 
-faire en fonction du nombre de boutton, alors / et les affiches
-Update C_button pour pas reccre le text_rect a chaque fois
-Creer une fonction draw 
+Faire que si create serv / go to menu = delete at each time the serv ngrok
